# vocalcurly

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  LICENSE.txt  README.md  world best voc repair.txt
Resources/Presets/: Default.xml
Source/AI/: AIModelInterface.h
Source/Core/: QuantumParameters.h
Source/GUI/: ParameterControls.h  PluginEditor.cpp  PluginEditor.h  SpectralDisplay.cpp  SpectralDisplay.h  Theme.h
Source/Plugin/: CreateFilter.cpp  PluginProcessor.cpp  PluginProcessor.h
TitanVocal/: LICENSE.txt  NOTICE.txt  create files.txt  directionsvoc.txt
TitanVocal/Resources/Scripts/: train_vocal_model.py
TitanVocal/Source/AI/: AIModelInterface.cpp  AIModelInterface.h
TitanVocal/Source/DSP/: SpectralAnalyzer.cpp  SpectralAnalyzer.h
TitanVocal/Source/GUI/: ParameterControls.cpp  ParameterControls.h  PluginEditor.cpp  PluginEditor.h  SpectralDisplay.cpp
TitanVocal/TitanVocal/Resources/Presets/: AiryVocal.xml
TitanVocal/TitanVocal/Source/AI/: AIModelInterface.cpp
TitanVocal/TitanVocal/Source/Plugin/: PluginProcessor.cpp  PluginProcessor.h
TitanVocal/VocalCraftQuantum/: CMakeLists.txt
TitanVocal/VocalCraftQuantum/Resources/Scripts/: train_vocal_model.py
TitanVocal/VocalCraftQuantum/Source/AI/: AIModelInterface.cpp  AIModelInterface.h
TitanVocal/VocalCraftQuantum/Source/DSP/: SpectralAnalyzer.cpp
TitanVocal/VocalCraftQuantum/Source/GUI/: ParameterControls.cpp  ParameterControls.h  PluginEditor.cpp  PluginEditor.h  SpectralDisplay.cpp
TitanVocal/VocalCraftQuantum/Source/Plugin/: PluginProcessor.h
VocalCraftQuantum/: CMakeLists.txt
VocalCraftQuantum/Source/Core/: QuantumParameters.h
VocalCraftQuantum/Source/DSP/: SpectralAnalyzer.h
VocalCraftQuantum/Source/GUI/: PluginEditor.cpp  SpectralDisplay.h
VocalCraftQuantum/Source/Plugin/: PluginProcessor.cpp  PluginProcessor.h
